<resources>
    <string name="app_name">APP Helper 2019</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings1">Settings2</string>
    <string name="action_settings2">Settings2</string>
    <string name="action_settings3">Settings3</string>
    <string name="clicked">Item is clicked</string>
    <string name="load_image">LOAD IMAGE</string>
    <string name="image_request">IMAGE REQUEST</string>
    <string name="get_string_json">GET String JSON</string>
    <string name="post_string_json">POST String JSON</string>
    <string name="custom_request">CUSTOM REQUEST</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="register">REGISTER</string>

    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="three">Three</string>
    <string name="count">count:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_title">alert title</string>
    <string name="alert_message">alert message</string>
    <string name="message_fragment_dialog">message_fragment_dialog</string>
    <string name="title_fragment_dialog">title_fragment_dialog</string>

    <string name="celsius">C</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_title">Default Channel</string>

</resources>
