<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/btn_plus"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/action_settings1"
        android:icon="@android:drawable/btn_dialog"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="2"
        android:title="@string/action_settings2"
        android:icon="@android:drawable/btn_radio"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/action_settings3"
        android:icon="@android:drawable/btn_star_big_on"
        app:showAsAction="never" />
</menu>